# executors

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.py  ml-requirements.txt  pyproject.toml  pytest.ini  renovate.json5  requirements.txt  vendor-requirements.txt
.github/workflows/: build.yml  check.yml  release.yml
docker/: Dockerfile  python3.7-gpu.Dockerfile  python3.8-gpu.Dockerfile
python-requirements/: requirements.txt  vendor-requirements-cpu.txt  vendor-requirements-gpu.txt  vendor-requirements.txt
python3.7-gpu/: Dockerfile
python3.8-gpu/: Dockerfile
test/: conftest.py  test_images.py
