[tool.poetry]
name = "executor-image-runtime"
version = "0.0.1"
description = "Executor image runtime"
authors = ["Layer <info@layer.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
pytest = "7.1.2"
pytest-cov = "3.0.0"
docker = "5.0.3"
pytest-xdist = "2.5.0"
